# puzzles-project

./: .gitignore  README.md  basics_puzzles.ipynb  class_puzzles.ipynb  main.py  numpy_matplotlib_puzzles.ipynb  pandas_puzzles.ipynb  pyproject.toml  requests_puzzles.ipynb  with_open_puzzles.ipynb
